[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/images/Rectangle 3 (1).png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Rectangle 1.png" type="Texture" id=7]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/img/images/Rectangle 3.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 723.92, 482.48 )
texture = ExtResource( 7 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Button" type="Button" parent="."]
margin_left = 105.0
margin_top = 226.0
margin_right = 1347.0
margin_bottom = 281.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 517.629
margin_top = 6.57626
margin_right = 777.629
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la vida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 226.0
margin_right = 1347.0
margin_bottom = 281.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button9"]
margin_left = 517.629
margin_top = 6.57626
margin_right = 777.629
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la vida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 105.0
margin_top = 290.0
margin_right = 1347.0
margin_bottom = 345.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
margin_left = 448.707
margin_top = 6.57626
margin_right = 844.707
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la libre expresión"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 290.0
margin_right = 1347.0
margin_bottom = 345.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button10"]
margin_left = 448.707
margin_top = 6.57626
margin_right = 844.707
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la libre expresión"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 105.0
margin_top = 354.0
margin_right = 1347.0
margin_bottom = 409.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button3"]
margin_left = 448.707
margin_top = 6.57626
margin_right = 844.707
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a vivir dignamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 354.0
margin_right = 1347.0
margin_bottom = 409.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button11"]
margin_left = 448.707
margin_top = 6.57626
margin_right = 844.707
margin_bottom = 44.5763
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a vivir dignamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 105.0
margin_top = 420.0
margin_right = 1347.0
margin_bottom = 475.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button4"]
margin_left = 412.747
margin_top = 3.57965
margin_right = 870.747
margin_bottom = 41.5797
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la privacidad en linea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button12" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 420.0
margin_right = 1347.0
margin_bottom = 475.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button12"]
margin_left = 412.747
margin_top = 3.57965
margin_right = 870.747
margin_bottom = 41.5797
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a la privacidad en linea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 105.0
margin_top = 484.0
margin_right = 1347.0
margin_bottom = 539.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button5"]
margin_left = 341.013
margin_top = 3.57965
margin_right = 968.013
margin_bottom = 41.5797
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho sobre la privacidad de las personas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button13" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 484.0
margin_right = 1347.0
margin_bottom = 539.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button13"]
margin_left = 341.013
margin_top = 3.57965
margin_right = 968.013
margin_bottom = 41.5797
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho sobre la privacidad de las personas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 105.0
margin_top = 544.0
margin_right = 1347.0
margin_bottom = 599.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button6"]
margin_left = 410.49
margin_top = 4.0
margin_right = 893.49
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho al acceso al ciberespacio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button14" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 544.0
margin_right = 1347.0
margin_bottom = 599.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button14"]
margin_left = 410.49
margin_top = 4.0
margin_right = 893.49
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho al acceso al ciberespacio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
margin_left = 105.0
margin_top = 608.0
margin_right = 1347.0
margin_bottom = 663.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button7"]
margin_left = 325.733
margin_top = 4.0
margin_right = 980.733
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a asociarse en comunidades en línea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button15" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 608.0
margin_right = 1347.0
margin_bottom = 663.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button15"]
margin_left = 325.733
margin_top = 4.0
margin_right = 980.733
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a asociarse en comunidades en línea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
margin_left = 105.0
margin_top = 672.0
margin_right = 1347.0
margin_bottom = 727.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button8"]
margin_left = 459.492
margin_top = 1.8811
margin_right = 798.492
margin_bottom = 39.8811
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a comunicarse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button16" type="Button" parent="."]
visible = false
margin_left = 105.0
margin_top = 672.0
margin_right = 1347.0
margin_bottom = 727.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button16"]
margin_left = 459.492
margin_top = 1.8811
margin_right = 798.492
margin_bottom = 39.8811
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Derecho a comunicarse"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_Button16_pressed"]
